Bug 787040. Fix build warnings under ipc/. r=ms2ger